# hijack-watcher

./: Cargo.toml  README.md  test.txt
.github/workflows/: main.yml  release.yml
src/: main.rs
