[package]
name = "hijackwatcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
ferrisetw = "1"
lazy_static = "1"

[dependencies.windows]
version = "0.43.0"
features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
    "Win32_Security_AppLocker",
    "Win32_Security_Authorization"
]
